# POS-system

./: .gitignore  completeinfo.md  index.html  inspect_audio.mjs  integration.md  licenses.json  package-lock.json  package.json  release.bat  scratch.py  supabase_tables.sql  tailwind.config.js  test_print.rs  update.json
receipt_printer_module/: README.md  printer_config.json  requirements.txt  shop_settings.json
receipt_printer_module/config/: printer_config.py  shop_settings.py
scripts/: build_sidecar.bat  generate_license.py  publish.js  test_download.py
src/: App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  test_query.py  updater_key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  test_query.rs
src-tauri/src/cloud_backup/: drive.rs  google_auth.rs  mod.rs  queue.rs  scheduler.rs
src-tauri/src/cloud_sync/: config.rs  mod.rs  supabase.rs  sync_queue.rs
src-tauri/src/db/: auto_post.rs  migrations.rs  mod.rs
src-tauri/src/db/queries/: accounts.rs  cashbook.rs  customers.rs  financials.rs  ledger.rs  license.rs  mod.rs  payments.rs  products.rs  repair.rs  reports.rs  sales.rs  settings.rs  shopify.rs  suppliers.rs  users.rs
src-tauri/src/hardware/: detection.rs  label.rs  mod.rs  printer.rs
src-tauri/src/import/: csv_reader.rs  excel_reader.rs  import_engine.rs  mod.rs  smart_mapper.rs  sqlite_reader.rs
src-tauri/src/payments/: credentials.rs  easypaisa.rs  hbl.rs  jazzcash.rs  mod.rs  stripe_pay.rs  types.rs
src-tauri/src/shopify/: client.rs
(+74 files in other folders)
