[package]
name = "pos-clothing"
version = "0.1.0"
description = "Clothing Store POS System"
authors = ["Subhan Faisal"]
edition = "2021"

[lib]
name = "pos_clothing_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
serialport = "4"
rusb = "0.9"
once_cell = "1"
parking_lot = "0.12"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
